--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=42", "wheel", "toml", "pathlib"]
+requires = ["setuptools>=42", "wheel", "tomli", "pathlib"]
 build-backend = "setuptools.build_meta"
 
 [project]
